# sound-detection

./: Makefile  README.md  alembic.ini  main.py  pyproject.toml  sound_detection.db
.github/workflows/: ci.yml
src/sound_detection/: __init__.py
src/sound_detection/api/: main.py
src/sound_detection/api/routers/: detections.py
src/sound_detection/core/: config.py
src/sound_detection/db/: __init__.py  models.py  session.py
src/sound_detection/db/migrations/: env.py
src/sound_detection/ml/: inference.py
src/sound_detection/schemas/: detection.py
tests/: test_health.py
